--- a/02_BDS_BatDongSan_MultiLand/assets/css/style.css
+++ b/02_BDS_BatDongSan_MultiLand/assets/css/style.css
@@ -2876,7 +2876,7 @@ span.notify-right {
 [14. footer]
 */
 #footer {
-    background: #60a5d8;
+    background: #3b5998!important;
 }
 
 /** add-box **/
