--- a/03_HR_Service_Frontend/Views/Shared/_Layout.cshtml
+++ b/03_HR_Service_Frontend/Views/Shared/_Layout.cshtml
@@ -88,7 +88,7 @@
                     </form>
                 </div>
                 <div class="col-xs-5 col-sm-3 col-md-2 group-button-header">
-                    <a target="_blank" title="Chia sẻ trên google+" href="https://plus.google.com/share?url=@HttpContext.Current.Request.Url.AbsoluteUri" class="btn-heart">wishlist</a>
+                    <a target="_blank" title="Chia sẻ trên google+" href="https://plus.google.com/share?url=@HttpContext.Current.Request.RawUrl" class="btn-heart">wishlist</a>
                     <div class="btn-cart" id="cart-block">
                         <a title="My cart" href="/product/checkout">Cart</a>
                         <span class="notify notify-right spN"></span>
