--- a/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
@@ -34,7 +34,7 @@
                         {
                             <a href="skype:@commonInfo.Skype?call"><i class="fa fa-skype"></i></a>
                         }
-                        <a title="Chia sẻ trên google+" target="_blank" href="https://plus.google.com/share?url=@HttpContext.Current.Request.Url.AbsoluteUri"><i class="fa fa-google-plus"></i></a>
+                        <a title="Chia sẻ trên google+" target="_blank" href="https://plus.google.com/share?url=@HttpContext.Current.Request.RawUrl"><i class="fa fa-google-plus"></i></a>
                     </div>
                 </div>
                 @*<div class="col-xs-2 col-sm-1">
