--- a/01_BDS_BatDongSan_MultiLand/Views/Shared/_Layout.cshtml
+++ b/01_BDS_BatDongSan_MultiLand/Views/Shared/_Layout.cshtml
@@ -132,7 +132,7 @@
                         <div class="introduce-title" style="margin-top:15px;">Chia sẻ với bạn bè</div>
                         <div class="social-link">
                             @{
-                                string thisUrl = HttpContext.Current.Request.Url.AbsoluteUri;
+                                string thisUrl = HttpContext.Current.Request.RawUrl;
                                 if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
                                 {
                             <a href="http://www.facebook.com/share.php?u=@commonInfo.FaceBookLink&title=@commonInfo.Desc" target="_blank"><i class="fa fa-facebook"></i></a>
