--- a/03_HR_Service_Frontend/Views/Product/Index.cshtml
+++ b/03_HR_Service_Frontend/Views/Product/Index.cshtml
@@ -130,12 +130,12 @@
                                     </div>
 
                                     <div class="button-group">
-                                        <a target="_blank" class="wishlist" href="//www.facebook.com/sharer.php?u=@HttpContext.Current.Request.Url.AbsoluteUri">
+                                        <a target="_blank" class="wishlist" href="//www.facebook.com/sharer.php?u=@HttpContext.Current.Request.RawUrl">
                                             <i class="fa fa-facebook-official"></i>
                                             <br>Share
                                         </a>
 
-                                        <a class="compare" href="//plus.google.com/share?url=@HttpContext.Current.Request.Url.AbsoluteUri">
+                                        <a class="compare" href="//plus.google.com/share?url=@HttpContext.Current.Request.RawUrl">
                                             <i class="fa fa-google-plus"></i>
                                             <br>
                                         </a>
