--- a/04_Shop_multiProduct/assets/css/style.css
+++ b/04_Shop_multiProduct/assets/css/style.css
@@ -3335,8 +3335,10 @@ span.notify-right{
 .product-list .product-container{
   border: 1px solid #eaeaea;
   overflow: hidden;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
   min-height:315px;
+  margin-bottom:5px;
+
 }
 .product-list .info-orther{
   display: none;
