--- a/05_Shop_MultiProduct/Views/Home/Contact.cshtml
+++ b/05_Shop_MultiProduct/Views/Home/Contact.cshtml
@@ -5,7 +5,7 @@
     if (ViewData["commonInfo"] != null)
     {
         commonInfo = (AnperoFrontend.WebService.Webconfig)ViewData["commonInfo"];
-        ViewBag.WebsiteUrl = HttpContext.Current.Request.Url.AbsoluteUri;
+        ViewBag.WebsiteUrl = HttpContext.Current.Request.RawUrl;
         ViewBag.Keywords = Anpero.StringHelpper.UnicodeToKoDau("thực phẩm sạch, hoa qua sạch, rau sạch, ngon lành, ngon sạch, trái cây sạch, bơ sáp, bơ booth, bưởi diễn, bưởi danh xanh, bưởi quế dương,mật ong");
     }
 }
