--- a/07_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/07_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -23,42 +23,64 @@
     @if (!Request.Browser.IsMobileDevice)
     {
         @Html.Partial("_partial/_HomeSlide_1");
-       <div id="top">
-            <div class="container">
-                <div class="row">
-                    <ul>
-                        @if (ViewData["AdsSlide"] != null)
-                        {
-                            Ads[] slide = (Ads[])ViewData["AdsSlide"];
-                            if (slide.Length > 0)
-                            {
-                                for (int i = 0; i < slide.Length; i ++)
-                                {
-                                    <li>
-                                        <div>
-                                            <a href="@slide[i].ClickUrl" data-scroll-goto="@(i+1)">
-                                                <img src="@slide[i].ImagesUrl" alt="@slide[i].Description" />
-                                            </a>
-                                        </div>
-                                    </li>
-                                }
-                            }
-                        }
-                    </ul>
-                </div>
-            </div>
-        </div> 
+      
     }
-    <div class="top-cate">
-        <div class="featured-pro container">
-            <div class="row">
-                <div class="slider-items-products">
-                    <div class="new_title">
-                        <h2>Loại Sản phẩm</h2>
+    <div class="container">
+        <div class="row">
+            <section class="top-cate col-md-12">
+
+                <div class="col-md-3">
+                    <div class="wp1">
+                        <h2 class="divider" style="margin-top: 8px; margin-bottom: 30px;"><a href="/"> Kiến trúc, nội thất &amp; xây dựng</a></h2>
+                        <p>10 năm kinh nghiệm trong ngành kiến trúc, nội thất và xây dựng, với hàng trăm khách hàng mỗi năm, Wonder là một công ty danh tiếng và đáng tin cậy trong việc cung cấp dịch vụ cho khách hàng tư nhân và doanh nghiệp.</p>
                     </div>
-                    <div id="top-categories" class="product-flexslider hidden-buttons">
-                        <div class="slider-items slider-width-col4 products-grid">
-                            @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
+
+                </div>
+                <div class="col-md-3">
+                    <div class="wp1">
+                        <div class="imgct">
+                            <a href="/"><img src="http://wonder.vn/wp-content/uploads/2015/12/w-12-300x212.jpg"></a>
+                            <h2>Kiến trúc</h2>
+
+                        </div>
+                        <p>Kiến trúc sư phác họa, tư vấn các vấn đề về kiến trúc (công năng, thẩm mỹ cũng như giải pháp kĩ thuật) cho các đối tượng khách hàng có nhu cầu xây dựng ở các lĩnh vực khác nhau.</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="wp1">
+                        <div class="imgct">
+                            <a href="/"><img src="http://wonder.vn/wp-content/uploads/2015/12/w-12-300x212.jpg"></a>
+                            <h2>Kiến trúc</h2>
+
+                        </div>
+                        <p>Kiến trúc sư phác họa, tư vấn các vấn đề về kiến trúc (công năng, thẩm mỹ cũng như giải pháp kĩ thuật) cho các đối tượng khách hàng có nhu cầu xây dựng ở các lĩnh vực khác nhau.</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="wp1">
+                        <div class="imgct">
+                            <a href="/"><img src="http://wonder.vn/wp-content/uploads/2015/12/w-12-300x212.jpg"></a>
+                            <h2>Kiến trúc</h2>
+
+                        </div>
+                        <p>Kiến trúc sư phác họa, tư vấn các vấn đề về kiến trúc (công năng, thẩm mỹ cũng như giải pháp kĩ thuật) cho các đối tượng khách hàng có nhu cầu xây dựng ở các lĩnh vực khác nhau.</p>
+                    </div>
+                </div>
+
+            </section>
+
+
+        </div>
+        <div class="top-cate">
+            <div class="featured-pro container">
+                <div class="row">
+                    <div class="slider-items-products">
+                        <div class="new_title">
+                            <h2>Loại Sản phẩm</h2>
+                        </div>
+                        <div id="top-categories" class="product-flexslider hidden-buttons">
+                            <div class="slider-items slider-width-col4 products-grid">
+                                @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
                             {
                                 foreach (var item in commonInfo.ProductCategoryList)
                                 {
@@ -66,24 +88,52 @@
                                     {
                                         foreach (var childItem in item.ChildCategory)
                                         {
-                                            <div class="item">
-                                                <div class="pro-img">
-                                                    <a href="@Anpero.StringHelpper.GetCategoryLink(childItem.Name, childItem.Id)">
-                                                        <img src="@childItem.Images" alt="@childItem.Name">
-                                                        <div class="pro-info">@childItem.Name</div>
-                                                    </a>
+                                                <div class="item">
+                                                    <div class="pro-img">
+                                                        <a href="@Anpero.StringHelpper.GetCategoryLink(childItem.Name, childItem.Id)">
+                                                            <img src="@childItem.Images" alt="@childItem.Name">
+                                                            <div class="pro-info">@childItem.Name</div>
+                                                        </a>
+                                                    </div>
                                                 </div>
-                                            </div>
                                         }
                                     }
                                 }
                             }
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>    
+    </div>
+    <div id="top">
+        <div class="container">
+            <div class="row">
+                <ul>
+                    @if (ViewData["AdsSlide"] != null)
+                    {
+                        Ads[] slide = (Ads[])ViewData["AdsSlide"];
+                        if (slide.Length > 0)
+                        {
+                            for (int i = 0; i < slide.Length; i++)
+                            {
+                                <li>
+                                    <div>
+                                        <a href="@slide[i].ClickUrl" data-scroll-goto="@(i+1)">
+                                            <img src="@slide[i].ImagesUrl" alt="@slide[i].Description" />
+                                        </a>
+                                    </div>
+                                </li>
+                            }
+                        }
+                    }
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    
     
     <section class="wow bounceInUp animated">
         <div class="best-pro slider-items-products container">
@@ -162,6 +212,7 @@
             </div>
         </div>
     </section>
+
     @if (ViewData["FeatureArticle"] != null)
     {
         SearchArticleResults FeatureArticle = (SearchArticleResults)ViewData["FeatureArticle"];
@@ -190,61 +241,5 @@
             }
         </div>
     }
-    <div class="brand-logo wow bounceInUp animated">
-        <div class="container">
-            <div class="row">
-                <div class="logo-brand col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <div class="new_title">
-                        <h2>Đối tác và Sản phẩm</h2>
-                    </div>
-                    <div class="slider-items-products">
-                        <div id="brand-slider" class="product-flexslider hidden-buttons">
-                            <div class="slider-items slider-width-col6">
-                                @if (ViewData["slide5"] != null)
-                                {
-                                    Ads[] slide = (Ads[])ViewData["slide5"];
-                                    if (slide.Length > 0)
-                                    {
-                                        for (int i = 0; i < slide.Length / 2; i++ )
-                                        { 
-                                            int j = i * 2;
-                                            <!-- Item -->
-                                            <div class="item">
-                                                <div class="logo-item"><a href="@slide[j].ClickUrl" target="_blank"><img src="@slide[j].ImagesUrl" alt="@slide[j].Description"></a></div>
-                                                <div class="logo-item"><a href="@slide[j+1].ClickUrl" target="_blank"><img src="@slide[j+1].ImagesUrl" alt="@slide[j+1].Description"></a></div>
-                                            </div>
-                                            <!-- End Item -->
-                                        }
-                                    }
-                                }
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 testimonials-section">
-                    <div class="offer-slider parallax parallax-2">
-                        <ul class="bxslider">
-                            
-                            @if (ViewData["slide6"] != null)
-                            {
-                                Ads[] slide = (Ads[])ViewData["slide6"];
-                                if (slide.Length > 0)
-                                {
-                                    for (int i = 0; i < slide.Length; i++)
-                                    {
-                                        <li>
-                                            <div class="avatar">
-                                                <img src="@slide[i].ImagesUrl" alt="Image">
-                                            </div>
-                                            @Html.Raw(slide[i].Description) 
-                                        </li>
-                                    }
-                                }
-                            }
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+   
 </div>
