--- a/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
@@ -188,36 +188,16 @@
             <div class="col-sm-12">
                 <ul id="trademark-list">
                     <li id="payment-methods">Hỗ trợ thanh toán</li>
-                    <li>
-                        <a href="#"><img src="/assets/data/nganluong.png" alt="Ngân lượng"></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="/assets/data/Techcombank_logo.jpg" alt="Techcombank"></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="/assets/data/trademark-wu.jpg" alt="ups"></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="/assets/data/trademark-cn.jpg" alt="ups"></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="/assets/data/trademark-visa.jpg" alt="ups"></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="/assets/data/trademark-mc.jpg" alt="ups"></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="/assets/data/trademark-ems.jpg" alt="ups"></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="/assets/data/trademark-dhl.jpg" alt="ups"></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="/assets/data/trademark-fe.jpg" alt="ups"></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="/assets/data/trademark-wm.jpg" alt="ups"></a>
-                    </li>
+                    <li><a href="#"><img src="/assets/data/nganluong.png" alt="Ngân lượng"></a></li>
+                    <li><a href="#"><img src="/assets/data/Techcombank_logo.jpg" alt="Techcombank"></a></li>
+                    <li><a href="#"><img src="/assets/data/trademark-wu.jpg" alt="ups"></a></li>
+                    <li><a href="#"><img src="/assets/data/trademark-cn.jpg" alt="ups"></a></li>
+                    <li><a href="#"><img src="/assets/data/trademark-visa.jpg" alt="ups"></a></li>
+                    <li><a href="#"><img src="/assets/data/trademark-mc.jpg" alt="ups"></a></li>
+                    <li><a href="#"><img src="/assets/data/trademark-ems.jpg" alt="ups"></a></li>
+                    <li><a href="#"><img src="/assets/data/trademark-dhl.jpg" alt="ups"></a></li>
+                    <li><a href="#"><img src="/assets/data/trademark-fe.jpg" alt="ups"></a></li>
+                    <li><a href="#"><img src="/assets/data/trademark-wm.jpg" alt="ups"></a></li>
                 </ul>
             </div>
         </div>
@@ -225,7 +205,7 @@
   
     <footer id="footer">
         <div class="container">
-            @Html.Raw(commonInfo.Footer)
+           
 
             <div id="introduce-box" class="row">
                 <div class="col-md-4">
@@ -274,17 +254,24 @@
                 <div class="col-md-4">
                     <div class="row">
                         <div class="col-sm-12">
-                            <div class="introduce-title">Danh mục chính</div>
-                            @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
+                            <div class="introduce-title">Các đại lý</div>
+                            @Html.Raw(commonInfo.Footer)
+                            <ul id="introduce-company" class="introduce-list">
+                                <li>About Us About Us  About Us About Us  About Us About Us  About Us About Us</li>
+                                <li>About Us About Us  About Us About Us  About Us About Us  About Us About Us</li>
+                                <li> About Us About Us  About Us About Us  About Us About Us  About Us About Us</li>
+                                
+                            </ul>
+                            @*@if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
                             {
                                 <ul id="introduce-company" class="introduce-list">
                                     @foreach (var item in commonInfo.ProductCategoryList)
                                     {
                                         <li><a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)" alter="@item.Name">@item.Name</a></li>
                                     }
-                                    <li><a title="blog" href="/blog">Blogs</a></li>
+                                    
                                 </ul>
-                            }
+                            }*@
                         </div>
                     </div>
                 </div>
@@ -294,43 +281,33 @@
                     <div id="contact-box" style="text-align: right;">
                         @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
                         {
-
-                            <div class="fb-page"
-                                 data-tabs="messages"
-                                 data-href="@Html.Raw(commonInfo.FaceBookLink)"
-                                 data-width="500"
-                                 data-height="300"
-                                 data-hide-cover="false"></div>
+                            <div class="fb-page" data-tabs="messages" data-href="@Html.Raw(commonInfo.FaceBookLink)" data-width="500" data-height="300" data-hide-cover="false"></div>
                         }
-
                     </div>
 
                 </div>
             </div>
 
-            <div id="footer-menu-box">
+            <div id="footer-menu-box">                
                 <div class="col-sm-12">
                     <ul class="footer-menu-list">
-                        <li><a href="/gioi-thieu-b76">Giới thiệu về chúng tôi</a></li>
+                        <li><a title="about" href="/about">Về chúng tôi</a></li>
+                        <li><a href="/home/contact">Liên hệ</a></li>
+                        
                     </ul>
                 </div>
                 <div class="col-sm-12">
-                    <ul class="footer-menu-list">
-                        <li><a href="/huong-dan-thanh-toan-a68">Hướng dẫn thanh toán</a></li>
-                            <li><a href="/home/contact">Liên hệ</a></li>
-                        
-                            <li><a title="about" href="/about">Về chúng tôi</a></li>                            
+                    <ul class="footer-menu-list">                            
                             <li><a title="Chính sách vận chuyển" href="/shippolicy">Chính sách vận chuyển</a></li>
                             <li><a title="Chính sách bảo hành" href="/WarrantyPolicy">Chính sách bảo hành</a></li>
                             <li><a title="Chính sách đổi trả" href="/ProductReturnPolicy">Chính sách đổi trả</a></li>
                             <li><a title="Chính sách bảo mật" href="/PrivacyPolicy">Chính sách bảo mật</a></li>
-                            <li><a title="Hướng dẫn thanh toán" href="/PaymentInfo">Hướng dẫn thanh toán</a></li>
-                        
-
+                            <li><a title="Hướng dẫn thanh toán" href="/PaymentInfo">Hướng dẫn thanh toán</a></li>                        
+                        <li><a href="/blog">Tin tức</a></li>
                     </ul>
                 </div>
 
-                <p class="text-center">Copyrights © 2017 @commonInfo.Name. All Rights Reserved. Designed by <a href="http://anpero.com" title="thiết kế web bán hàng anpro">Anpero.com</a></p>
+                <p class="text-center">Copyrights © 2017 @commonInfo.Name. All Rights Reserved. Designed by <a href="http://anpero.com" title="thiết kế web bán hàng anpero">Anpero.com</a></p>
             </div>
         </div>
     </footer>
