--- a/04_Shop_multiProduct/Views/Shared/_partial/_HomeSlide_1.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_partial/_HomeSlide_1.cshtml
@@ -20,7 +20,7 @@
                             <div id="bx-pager" class="slide-pager">
                                 @for (int i = 0; i < slide.Length; i++)
                                 {
-                                    <a data-slide-index="@i" href="">@i</a>
+                                    <a data-slide-index="@i" href="">@(i+1)</a>
                                 }
                             </div>
                             <div class="slide-next">
