--- a/05_Shop_MultiProduct/Views/Article/Index.cshtml
+++ b/05_Shop_MultiProduct/Views/Article/Index.cshtml
@@ -15,6 +15,9 @@
     <meta property="og:url" content="@ViewBag.WebsiteUrl" />
     <meta property="og:image" content="@item.Thumb" />
 }
+@section canonical{
+    <link rel="canonical" href="@ViewBag.WebsiteUrl" />
+}
 <div class="page-heading">
     <div class="container">
         <div class="row">
