--- a/05_Shop_MultiProduct/Views/Product/List.cshtml
+++ b/05_Shop_MultiProduct/Views/Product/List.cshtml
@@ -200,7 +200,7 @@
                                                                 <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)">
                                                                     <img class="img-responsive" alt="product" src="@item.Images" />
                                                                 </a>
-                                                                <div class="price-percent-reduction2">giảm @itemPecentDow.ToString() %</div>
+                                                                <div class="price-percent-reduction2">Giảm @itemPecentDow.ToString() %</div>
                                                             </div>
                                                             <div class="right-block">
                                                                 <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)">@item.PrName</a></h5>
