--- a/05_Shop_MultiProduct/assets/stylesheet/style.css
+++ b/05_Shop_MultiProduct/assets/stylesheet/style.css
@@ -145,6 +145,7 @@ header {
     display: block;
     line-height: 105px;
     float: left;
+    padding-top: 13px;
     padding-right: 25px;
     padding-left: 20px;
     margin-top: -41px;
