--- a/05_Shop_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/05_Shop_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -40,7 +40,7 @@
     <footer>
         <!-- BEGIN INFORMATIVE FOOTER -->
         <div class="footer-inner">
-            <div class="newsletter-row">
+            @*<div class="newsletter-row">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col">
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <!--footer-column-last-->
-            </div>
+            </div>*@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4 col-xs-12 col-lg-4">
@@ -103,7 +103,7 @@
 
                                         if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
                                         {
-                                            <li class="fb pull-left"><a target="_blank" rel="nofollow" href="http://www.facebook.com/share.php?u=@commonInfo.FaceBookLink&title=@commonInfo.Desc" title="Facebook"></a></li>
+                                            <li class="fb pull-left"><a target="_blank" rel="nofollow" href="http://www.facebook.com/share.php?u=@thisUrl" title="Facebook"></a></li>
 
                                         }
                                         if (!string.IsNullOrEmpty(commonInfo.Skype))
@@ -114,7 +114,7 @@
                                         <li class="tw pull-left"><a target="_blank" rel="nofollow" href="http://www.twitter.com/share?url=@thisUrl" title="Twitter"></a></li>
                                         <li class="googleplus pull-left"><a target="_blank" rel="nofollow" href="https://plus.google.com/share?url=@thisUrl" title="GooglePlus"></a></li>
                                         @*<li class="rss pull-left"><a target="_blank" rel="nofollow" href="#" title="RSS"></a></li>*@
-                                        <li class="pintrest pull-left"><a target="_blank" rel="nofollow" href="http://pinterest.com/pinthis?url=@thisUrl" title="PInterest"></a></li>
+                                        @*<li class="pintrest pull-left"><a target="_blank" rel="nofollow" href="http://pinterest.com/pinthis?url=@thisUrl" title="PInterest"></a></li>*@
                                         @*<li class="linkedin pull-left"><a target="_blank" rel="nofollow" href="#" title="Linkedin"></a></li>*@
                                         @*<li class="youtube pull-left"><a target="_blank" rel="nofollow" href="#" title="Youtube"></a></li>*@
                                     }
