--- a/07_Shop_MultiProduct/assets/stylesheet/style.css
+++ b/07_Shop_MultiProduct/assets/stylesheet/style.css
@@ -1010,13 +1010,11 @@ background-color: #fff;
             #nav > li > a > span {
                 display: inline-block;
                 padding: 0 15px;
+                text-shadow: 1px 1px 1px #888888;
             }
 
             #nav > li > a:hover > span {
-            }
-    /* Drop-down boxes:
-wide:    2nd-level category drop-down box + custom block drop-down box
-classic: custom block drop-down box */
+            }    
     #nav .level0-wrapper {
         position: absolute;
         left: -10000px;
@@ -14303,21 +14301,25 @@ h1.divider:after, h2.divider:after, h3.divider:after, h4.divider:after, h5.divid
         text-shadow: 2px 2px #2d1a0c;
         font-size: 18px;
     }
-
+.tct2{padding:20px;}
 .tct2 ul {
     margin: 0;
     text-align: center;
     overflow: inherit;
     font-size: 1em;
+    margin-bottom: 15px;
 }
 
     .tct2 ul li {
-        margin: 0;
         position: relative;
         display: inline-block;
-        height: 140px;
-        width: 140px;
-        background-color: #f7f7f7;
+        height: 90px;
+        width: 90px;
+        background-color: white;
+        margin: 10px;
+        box-shadow: 1px 1px 1px #888888;
+        cursor: pointer;
+        color:rgb(87, 71, 65);
     }
 
         .tct2 ul li i {
@@ -14328,7 +14330,155 @@ h1.divider:after, h2.divider:after, h3.divider:after, h4.divider:after, h5.divid
             line-height: 50px;
         }
 
+        .tct2 ul .vc_active, .tct2 ul li:hover {
+            background-color: rgba(43, 23, 13, 0.8);
+        }
+
+            .tct2 ul .vc_active i, .tct2 ul .vc_active span, .tct2 ul li:hover {
+                color: white !important;
+            }
+
         .tct2 ul li span {
             display: block;
             margin: 0;
         }
+
+.brGrey {
+    background-color: #f8f7f7;
+    color: white !important;
+}
+
+.tct2 ul li:after {
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid;
+    bottom: -10px;
+    content: "";
+    height: 0;
+    left: 50%;
+    margin-left: -10px;
+    position: absolute;
+    width: 0;
+    -webkit-opacity: 0;
+    -khtml-opacity: 0;
+    -moz-opacity: 0;
+    opacity: 0;
+    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+    filter: alpha(opacity=0);
+    visibility: hidden;
+}
+
+.single-price {
+    margin: -3px;
+}
+
+.tabs-list {
+    margin-bottom: 10px;
+}
+
+.tct2 ul .vc_active:after {
+    -webkit-opacity: 1;
+    -khtml-opacity: 1;
+    -moz-opacity: 1;
+    opacity: 1;
+    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=80);
+    filter: alpha(opacity=80);
+    visibility: visible;
+    color: #574741;
+}
+
+.price-header {
+    position: relative;
+    overflow: hidden;
+}
+
+.single-blog .blog-photo img, .single-price .price-header img {
+    z-index: -1;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.price-plan {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    z-index: 1;
+    color: #64BE43;
+}
+
+    .price-plan:before {
+        content: "";
+        position:;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #000000;
+        opacity: 0.5;
+        z-index: -1;
+        -webkit-transition: 0.2s;
+        transition: 0.2s;
+    }
+
+.price-title h3 {
+    font-weight: 600;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+.price-rate {
+    border-left: 1px solid #64BE43;
+    margin-left: 15px;
+    padding-left: 15px;
+}
+
+.price-body {
+    border: 1px solid #dddddd;
+    padding: 15px 0;
+    text-align: center;
+    color: #574741;
+    padding: 20px;
+    min-height:347px;
+    background-color:white;
+}
+
+.price-footer {
+    background-color:#574741;
+    text-align: center;
+    padding: 20px;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+    min-height:100px;
+}
+.prc {
+    font-size: 30px;
+    color: red;
+    margin: 30px 0 10px 0;
+}
+.prc2 {
+    font-size:20px;
+}
+.single-price:hover .price-plan {
+    color: #ffffff;
+}
+.tableCt .add_cart{
+    color:black;
+    margin-bottom:10px
+}
+.price-body2{
+    background-color:red;
+    color:white!important;
+}
+.price-body2 .prc{color:white!important;}
